Add autowired annotation
